--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
         "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3",
+        "twilio/sdk": "^6.26",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
